# nala

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
mobile/: README.md  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  onboarding.tsx
mobile/lib/: api.ts  (+5 more)
mockups/: index.html  jarvis-final-flow.html  mission-control-v1-triptych.html  mission-control-v2-workspace.html  mission-control-v3-graph.html  mission-index.html  mockup-1-mission-control.html  mockup-2-conversation.html  mockup-3-bento-dashboard.html  mockup-4-terminal.html  mockup-5-ambient-orb.html
nala/: auth.py  brain.py  briefing.py  chokepoint.py  cli.py  config.py  db.py  errors.py  events.py  google_auth.py  memory.py  purposes.py  reconciler.py  routing.py  scheduler.py  seed_memory.py  serve.py  spend.py  state.py  triage.py  validation.py  voice.py
scripts/: com.nala.briefing.plist  com.nala.scheduler.plist  com.nala.server.plist  lint_action_path.sh  voice_smoke.py
tests/: conftest.py  test_atomicity.py  test_auth.py  test_boundary_validation.py  test_briefing.py  test_chokepoint_guard.py  test_cli.py  test_confirm_gate.py  test_dispatch_ticket.py  test_google_auth.py  test_idempotency.py  test_loud_failure.py  test_memory.py  test_memory_chokepoint.py  test_provenance.py  test_purposes.py  test_risk_profiles.py  test_scheduler.py  test_seed_memory.py  test_serve.py  test_spend_ceiling.py  test_triage.py  test_voice.py  test_watchers_base.py  test_watchers_calendar.py  test_watchers_git.py  test_watchers_gmail.py  test_watchers_state.py
(+41 files in other folders)
