[project]
name = "nala"
version = "0.1.0"
description = "Voice-first, proactive, multipurpose personal assistant"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "pydantic>=2",
    "python-dotenv",
    "pyyaml",
    "google-api-python-client",
    "google-auth-oauthlib",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "parakeet-mlx",
    "mlx-audio",
    "misaki[en]",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nala"]

[tool.pytest.ini_options]
pythonpath = ["."]
